--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+       name: kivy-apk
+       path: bin/*.apk
+
 
     - name: Install system dependencies
       run: |
