--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-       name: kivy-apk
-       path: bin/*.apk
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y python3-pip git zip unzip openjdk-17-jdk \
@@ -35,7 +31,7 @@ jobs:
         buildozer android debug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: kivy-apk
         path: bin/*.apk
