--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install dependencies
+    - name: Fix apt sources and install dependencies
       run: |
-       sudo rm -f /etc/apt/apt-mirrors.txt
+       sudo rm -f /etc/apt/sources.list.d/ubuntu.sources
+       sudo rm -f /etc/apt/sources.list
+       echo "deb http://archive.ubuntu.com/ubuntu noble main universe restricted multiverse" | sudo tee /etc/apt/sources.list
+       echo "deb http://archive.ubuntu.com/ubuntu noble-updates main universe restricted multiverse" | sudo tee -a /etc/apt/sources.list
+       echo "deb http://archive.ubuntu.com/ubuntu noble-security main universe restricted multiverse" | sudo tee -a /etc/apt/sources.list
        sudo apt update
        sudo apt install -y python3-pip git zip unzip default-jdk \
        autoconf libtool pkg-config zlib1g-dev \
        libncurses-dev cmake \
        libffi-dev libssl-dev
+
 
 
 
