--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,12 @@ jobs:
         pip install --upgrade pip
         pip install buildozer
 
+    - name: Install Python dependencies
+      run: |
+        python3 -m pip install --upgrade pip
+        pip install cython buildozer kivy
+
+
     - name: Build APK
       run: |
         buildozer android debug
