--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,8 @@ jobs:
 
     - name: Build APK
       run: |
-        buildozer android debug
+         yes | buildozer -v android debug
+
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
